<resources>
    <!-- Main -->
    <string name="app_name">Compute your Fiscal Code</string>
    <string name="tab_compute">Compute</string>
    <string name="tab_compute_info">Compute a Fiscal Code</string>
    <string name="tab_verify">Verify</string>
    <string name="tab_verify_info">Verify a Fiscal Code</string>
    <string name="tab_extract">Estract data</string>
    <string name="tab_extract_info">Extract data from a F.C.</string>

    <!-- Compute, Extract, Verify -->
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>
    <string name="placeOfBirth_hint">Arezzo (AR)</string>
    <string name="dateOfBirth_hint">15/03/1980</string>
    <string name="computeBtn_it">Compute</string>
    <string name="first_name_label">First name</string>
    <string name="first_name_example">Alessandro</string>
    <string name="last_name_label">Last name</string>
    <string name="gender_label">Gender</string>
    <string name="last_name_example">Bianchi</string>
    <string name="dob_label">Date of birth</string>
    <string name="pob_label">Place of birth</string>
    <string name="sample_fiscal_code">BNCLSN90H06A462X</string>
    <string name="extract_prompt">Type your fiscal code</string>
    <string name="extract_data_button">Extract data</string>
    <string name="fiscal_code_label">Fiscal code</string>
    <string name="verify_button">Verify</string>
    <string name="fiscal_code_is_correct">The fiscal code is correct</string>
    <string name="fiscal_code_is_not_correct">The fiscal code doesn\'t match the data inserted</string>
    <string name="gender_example">M</string>
    <string name="dob_example">06/06/90</string>
    <string name="placeOfBirth_hint_2">Ascoli Piceno (AP)</string>
    <string name="name_code_hint">LSN</string>
    <string name="last_name_code_example">BNC</string>
    <string name="fiscal_code_short_label">Fisc. code</string>
    <string name="reset_button">Reset button</string>
    <string name="copied_to_clipboard">%1$s copied to clipboard</string>
    <string name="nothing_to_copy">Nothing to copy  🤷‍♂️</string>
    <string name="data_copied_to_clipboard">Data copied to clipboard</string>

    <!-- Errors -->
    <string name="empty_field_error">Required value</string>
    <string name="invalid_input_error">Value is invalid</string>
    <string name="invalid_fiscal_code_input_error">The fiscal code inserted is in the wrong format</string>

    <!-- Preference Titles -->
    <string name="general_header">General</string>
    <string name="legal_header">Legal</string>

    <!-- Sync Preferences -->
    <string name="settings">Settings</string>
    <string name="fc_info">About the Fiscal Code</string>

    <!-- Feedback view -->
    <string name="feedback_header">Send feedback</string>
    <string name="feedback_summary">Report technical issues or suggest new features</string>
    <string name="enter_feedback">Enter feedback</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="feedback_subtitle">Please <b>describe any problem as accurately as possible</b> (e.g. \"I can\'t find the town XXX in the list\" or \"The app doesn\'t display correctly on my Samsung Galaxy S5 with OS version 10\").
        \n\nYour feedback is <b>anonymous</b> and will only be used to improve the app.\nIf you wish to message us
        directly instead, you may find our details in the Info section or on the app\'s page on Play Store.
        \nThank you for your help!</string>
    <string name="send_us_feedback"><u>Send us feedback</u></string>
    <string name="email_sent_successfully">Feedback was sent successfully</string>

    <!-- T&Cs View -->
    <string name="tcs_title">Terms &amp; Conditions</string>
    <string name="tcs_title_ul"><u>Terms &amp; Conditions</u></string>
    <string name="tcs_summary">View the app\'s T&amp;Cs</string>
    <string name="disclaimer_1">The only valid tax code is the one issued by the <i>Agenzia delle Entrate</i>,
        the Italian Revenue Service.</string>
    <string name="disclaimer_2">The fiscal code generated is to be considered an example,
        because in rare cases of homonymity and coincidence of personal data, the system generates
        a non-univocal code. In the reality of the cases, this does not happen because the Italian
        Inland Revenue replaces one of the characters with a letter to make all the assigned codes unique.
    </string>
    <string name="disclaimer_3">The use for illegal purposes of a tax code is severely punished by law,
        therefore we decline any responsibility for any misuse of the code calculated with <i>Compute your Fiscal Code</i>.
    </string>
    <string name="tc_link"><a href="https://mpancaldi.co.uk/apps/fiscal-code/">Complete Terms &amp; Conditions</a></string>
    <string name="copyright">© Compute your Fiscal Code\nCopyright 2020</string>

    <!-- Privacy View -->
    <string name="privacy">Privacy</string>
    <string name="privacy_ul"><u>Privacy Policy</u></string>
    <string name="privacy_summary">How your personal details will be used</string>
    <string name="privacy_1">The data related to the generation or decoding of the fiscal code, that is\n
        \n -  first name
        \n -  last name
        \n -  gender
        \n -  date of birth
        \n -  place of birth
        \n -  tax code
        \n\nare not collected or stored, and are used exclusively to provide the service.
    </string>
    <string name="privacy_link"><a href="https://mpancaldi.co.uk/apps/fiscal-code#privacy">Complete Privacy Policy</a></string>

    <!-- Info View -->
    <string name="info">Info</string>
    <string name="info_ul"><u>Information</u></string>
    <string name="info_summary">App information</string>
    <string name="version">Version 1.13</string>
    <string name="developed_by">App designed and developed by <a href="https://mpancaldi.co.uk/">Marta Pancaldi</a></string>
    <string name="review">If you like this app, send me a feedback (Settings > Send feedback) or leave a review on Play Store!</string>
    <string name="app_icon">App icon</string>
    <string name="fiscal_code_card">Fiscal Code card</string>
    <string name="fiscal_code_parts">Parts of the Fiscal Code</string>
    <string name="place_of_birth_info">Place of birth info</string>
    <string name="pob_info_text">Enter your Italian town of birth, or the foreign country you were born in.</string>
    <string name="pob_info_close">Got it</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Pancaldim Apps</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="about">About</string>
    <string name="barcode_output_description">Barcode output</string>
    <string name="show_barcode">Show barcode</string>
    <string name="save_directory">ComputeYourFiscalCode</string>
    <string name="saved_to_gallery">Saved to Gallery</string>
    <string name="save_error">Error saving image to gallery</string>
    <string name="share_error">Error sharing image</string>
    <string name="save_permission_error">Couldn\'t write to internal storage: check the app\'s permission in Settings and retry</string>

</resources>
