<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header">

        <Preference
            app:icon="@drawable/ic_info_24px"
            app:key="info"
            app:summary="@string/info_summary"
            app:title="@string/info" />

        <Preference
            app:icon="@drawable/ic_feedback_24px"
            app:key="feedback"
            app:summary="@string/feedback_summary"
            app:title="@string/feedback_header" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/legal_header">

        <Preference
            app:icon="@drawable/ic_policy_24px"
            app:key="tcs"
            app:summary="@string/tcs_summary"
            app:title="@string/tcs_title" />

        <Preference
            app:icon="@drawable/ic_privacy_tip_24px"
            app:key="privacy"
            app:summary="@string/privacy_summary"
            app:title="@string/privacy" />

    </PreferenceCategory>

</PreferenceScreen>