<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_compute"
            android:icon="@drawable/ic_account_circle_24px"
            android:title="@string/tab_compute" />
        <item
            android:id="@+id/nav_extract"
            android:icon="@drawable/ic_cached_24px"
            android:title="@string/tab_extract" />
        <item
            android:id="@+id/nav_verify"
            android:icon="@drawable/ic_verified_24px"
            android:title="@string/tab_verify" />
    </group>

    <item android:title="@string/about">
        <menu>
            <item
                android:id="@+id/nav_about_fc"
                android:icon="@drawable/ic_info_24px"
                android:title="@string/fc_info" />
        </menu>
    </item>
</menu>