<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/terms_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        android:text="@string/tcs_title_ul"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/terms_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/terms_title"
        android:layout_marginBottom="15dp"
        android:text="@string/disclaimer_1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/terms_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/terms_1"
        android:layout_marginBottom="15dp"
        android:text="@string/disclaimer_2" />

    <TextView
        android:id="@+id/terms_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/terms_2"
        android:layout_marginBottom="20dp"
        android:text="@string/disclaimer_3" />

    <TextView
        android:id="@+id/terms_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/terms_3"
        android:layout_marginBottom="20dp"
        android:text="@string/tc_link" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/terms_4"
        android:gravity="center_horizontal"
        android:text="@string/copyright"
        android:textSize="12sp"
        android:textStyle="bold" />
</RelativeLayout>