<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="20dp"
        android:background="@drawable/barcode_background_border"
        android:id="@+id/fc_data_group">

        <TextView
            android:id="@+id/brc_first_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"
            android:ems="7"
            android:text="@string/first_name_label"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/brc_first_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/brc_first_name_label"
            android:hint="@string/name_code_hint"/>

        <TextView
            android:id="@+id/brc_last_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_below="@id/brc_first_name_label"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ems="7"
            android:text="@string/last_name_label"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/brc_last_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_below="@+id/brc_first_name_text"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/brc_last_name_label"
            android:hint="@string/last_name_code_example"/>

        <TextView
            android:id="@+id/brc_gender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_below="@id/brc_last_name_label"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ems="7"
            android:text="@string/gender_label"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/brc_gender_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_below="@+id/brc_last_name_text"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/brc_gender_label"
            android:hint="@string/gender_example"/>

        <TextView
            android:id="@+id/brc_dob_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/brc_gender_label"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ems="7"
            android:text="@string/dob_label"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/brc_dob_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/brc_gender_text"
            android:textSize="15sp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/brc_dob_label"
            android:hint="@string/dob_example"/>

        <TextView
            android:id="@+id/brc_pob_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/brc_dob_label"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:layout_marginEnd="10dp"
            android:ems="7"
            android:text="@string/pob_label"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/brc_pob_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/brc_dob_text"
            android:textSize="15sp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/brc_pob_label"
            android:hint="@string/placeOfBirth_hint_2"/>

        <TextView
            android:id="@+id/brc_fc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/brc_pob_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/sample_fiscal_code"
            android:textSize="24sp"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/brc_barcodeOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fc_data_group"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/textBackground"
        android:contentDescription="@string/barcode_output_description"
        android:text=""
        android:textColor="@color/black"
        android:textSize="24sp"/>

</RelativeLayout>