<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ui.main.compute.ComputeFragment">

<!--    <TextView-->
<!--        android:id="@+id/compute_section_label"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="@dimen/activity_horizontal_margin"-->
<!--        android:layout_marginTop="@dimen/activity_vertical_margin"-->
<!--        android:layout_marginEnd="@dimen/activity_horizontal_margin"-->
<!--        android:layout_marginBottom="36dp"-->
<!--        android:text="@string/tab_compute"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        tools:layout_constraintLeft_creator="1"-->
<!--        tools:layout_constraintTop_creator="1" />-->

    <TextView
        android:id="@+id/first_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/section_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:ems="4"
        android:text="@string/first_name_label"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/section_label"
        android:layout_toEndOf="@id/first_name_label"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/first_name_example"
        android:inputType="textPersonName"
        android:paddingBottom="16dp" />

    <TextView
        android:id="@+id/last_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_name"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:ems="4"
        android:text="@string/last_name_label"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_name"
        android:layout_toEndOf="@id/last_name_label"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/last_name_example"
        android:inputType="textPersonName"
        android:paddingBottom="16dp" />

    <TextView
        android:id="@+id/gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_name"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:ems="4"
        android:text="@string/gender_label"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="227dp"
        android:layout_height="34dp"
        android:layout_below="@id/last_name"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/gender_label"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male_it" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female_id" />
    </RadioGroup>

    <TextView
        android:id="@+id/dob_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gender_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp"
        android:ems="7"
        android:text="@string/dob_label"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/dateOfBirth_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gender_label"
        android:layout_marginTop="24dp"
        android:layout_toEndOf="@id/dob_label"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/dateOfBirth_hint"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/pob_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dob_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp"
        android:ems="7"
        android:text="@string/pob_label"
        android:textSize="18sp" />

    <AutoCompleteTextView
        android:id="@+id/pob_autocompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/dateOfBirth_editText"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/pob_label"
        android:hint="@string/placeOfBirth_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0" >

        <requestFocus/>
    </AutoCompleteTextView>

</RelativeLayout>