<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.main.extract.ExtractFragment">

    <TextView
        android:id="@+id/fiscalCodeInputLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/extract_prompt"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/fiscalCodeInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fiscalCodeInputLabel"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:hint="@string/sample_fiscal_code" />

    <Button
        android:id="@+id/extract_data_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/fiscalCodeInputEditText"
        android:layout_marginTop="20dp"
        android:text="@string/extract_data_button" />

</RelativeLayout>